Cleaned data & CSV creation

--- a/Subscriber-Cancellations-Data-Pipeline-Portfolio-Project.ipynb
+++ b/Subscriber-Cancellations-Data-Pipeline-Portfolio-Project.ipynb
@@ -22,7 +22,7 @@
     "tags": []
    },
    "source": [
-    "###Reading Data"
+    "###Reading Data\n"
    ]
   },
   {
@@ -362,6 +362,16 @@
    ],
    "source": [
     "stu.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ecbf4e-c13c-4836-9ca0-a9ec5e7881da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###DATA CORRECTION AND CLEANING"
    ]
   },
   {
@@ -737,13 +747,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "id": "1fe3ebc2-4219-4bde-b087-a9ce97f4d557",
+   "execution_count": null,
+   "id": "58e5cf8a-ce2f-4d67-9553-3e4bdc93adf3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stu['current_career_path_id'] = stu['current_career_path_id'].astype(int)\n",
-    "stu['job_id'] = stu['job_id'].astype(int)"
+    "###JOIN"
    ]
   },
   {
@@ -1065,6 +1074,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "86497cb4-c9b3-4173-96e2-6ad07c34da77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###CREATING A NEW DB OF CLEANED DATA "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "1fe3ebc2-4219-4bde-b087-a9ce97f4d557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stu['current_career_path_id'] = stu['current_career_path_id'].astype(int)\n",
+    "stu['job_id'] = stu['job_id'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 273,
    "id": "ecfa23b0-ff9e-4097-b2a2-4a55750b4875",
    "metadata": {},
@@ -1307,6 +1337,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "73de58ad-e415-42fa-be55-087299253a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###NEW CLEANED DB TO CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 287,
    "id": "8d9d144a-6dc5-49f0-a32c-e556e1908968",
    "metadata": {},
@@ -1314,21 +1354,13 @@
    "source": [
     "final_db_df.to_csv('cademycode_clean.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cc8b489-23ee-4d96-a99f-4434fa75415a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anaconda-panel-2023.05-py310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-anaconda-panel-2023.05-py310-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1340,7 +1372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
